langkit/sustained/src/gpr_parser.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* gpr_base_node;
        



    typedef struct {
            gpr_base_node node;
            gpr_internal_entity_info info;
    } gpr_base_entity;
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_attribute_decl``, ``gpr_case_construction``, ``gpr_empty_decl``,
 * ``gpr_package_decl``, ``gpr_typed_string_decl``, ``gpr_variable_decl``
 */
extern int gpr_project_declaration_f_decls(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_identifier``,
 * ``gpr_prefix``
 */
extern int gpr_project_declaration_f_end_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_extension_f_is_all(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_project_extension_f_path_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_string_literal_at_f_str_lit(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_string_literal_at_f_at_lit(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_typed_string_decl_f_type_id(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_typed_string_decl_f_string_literals(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_variable_decl_f_var_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_variable_decl_f_var_type(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_builtin_function_call``, ``gpr_string_literal_at``, ``gpr_terms``,
 * ``gpr_variable_reference``
 */
extern int gpr_variable_decl_f_expr(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_variable_reference_f_attribute_ref(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_with_decl_f_is_limited(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_with_decl_f_path_names(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);