langkit/src/gpr_parser-ast-types-c.ads


   function gpr_project_declaration_f_decls
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_decls";
   


           

   

   function gpr_project_declaration_f_end_name
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_declaration_f_end_name";
   


           

   

   function gpr_project_extension_f_is_all
     (Node    : gpr_base_node;
      Value_P : int_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_extension_f_is_all";
   


           

   

   function gpr_project_extension_f_path_name
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_extension_f_path_name";
   


           

   

   function gpr_project_qualifier_f_qualifier
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_qualifier_f_qualifier";
   


           

   

   function gpr_project_reference_f_attr_ref
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_project_reference_f_attr_ref";
   


           

   

   function gpr_qualifier_names_f_qualifier_id1
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_qualifier_names_f_qualifier_id1";
   


           

   

   function gpr_qualifier_names_f_qualifier_id2
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_qualifier_names_f_qualifier_id2";
   


           

   

   function gpr_string_literal_at_f_str_lit
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_string_literal_at_f_str_lit";
   


           

   

   function gpr_string_literal_at_f_at_lit
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_string_literal_at_f_at_lit";
   


           

   

   function gpr_term_list_f_terms
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_term_list_f_terms";
   


           

   

   function gpr_typed_string_decl_f_type_id
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_typed_string_decl_f_type_id";
   


           

   

   function gpr_typed_string_decl_f_string_literals
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_typed_string_decl_f_string_literals";
   


           

   

   function gpr_variable_decl_f_var_name
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_var_name";
   


           

   

   function gpr_variable_decl_f_var_type
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_var_type";
   


           

   

   function gpr_variable_decl_f_expr
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_decl_f_expr";
   


           

   

   function gpr_variable_reference_f_variable_name1
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_reference_f_variable_name1";
   


           

   

   function gpr_variable_reference_f_variable_name2
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_reference_f_variable_name2";
   


           

   

   function gpr_variable_reference_f_attribute_ref
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_variable_reference_f_attribute_ref";
   


           

   

   function gpr_with_decl_f_is_limited
     (Node    : gpr_base_node;
      Value_P : int_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_with_decl_f_is_limited";
   


           

   

   function gpr_with_decl_f_path_names
     (Node    : gpr_base_node;
      Value_P : gpr_base_node_Ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_with_decl_f_path_names";
   



end GPR_Parser.AST.Types.C;
